# SwapCore

./: LICENSE
collect/: preprocess.py  tracer.py
eval/: benchmark.py
native/: Bindings.cpp  CMakeLists.txt  FaultHandler.cpp  FaultHandler.hpp  MemRegion.cpp  MemoryManager.cpp  MemoryManager.hpp  runtime_gru.cpp  runtime_gru.hpp  runtime_gru_params.hpp
tests/: test_runtime_gru_validation.py
train/: export.py  model.py  training.py
